virtualbox (6.0.8-dfsg-3) unstable; urgency=medium

  [ YOSHINO Yoshihito <yy.y.ja.jp@gmail.com> ]
  * Use dh_prep for vbox-*-source packages, fixing compat level 12 failure.

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Fri, 17 May 2019 16:39:21 +0200

virtualbox (6.0.8-dfsg-2) unstable; urgency=medium

  * Bump compat level to 12

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Wed, 15 May 2019 10:18:23 +0200

virtualbox (6.0.8-dfsg-1) unstable; urgency=medium

  * New upstream version 6.0.8-dfsg
  * Patch refresh, drop upstream patches: 78446 78447

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Wed, 15 May 2019 10:15:16 +0200

virtualbox (6.0.6-dfsg-2) unstable; urgency=medium

  * Cherry-pick two upstream fixes for guest kernel modules

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Wed, 08 May 2019 15:09:14 +0200

virtualbox (6.0.6-dfsg-1) unstable; urgency=medium

  * Implement DEB_BUILD_OPTIONS=parallel=n handling during build
    (Closes: #924302)
  * New upstream version 6.0.6-dfsg
  * Patch refresh
  * drop upstream patches:
    - debian/patches/77040.patch
    - debian/patches/77542.patch
    - debian/patches/java11-upstream.patch
  * Drop Ubuntu patch, now differently part of upstream code:
    - debian/patches/fix-vboxvideo-with-linux-5.0.patch

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Wed, 17 Apr 2019 00:08:12 +0200

virtualbox (6.0.4-dfsg-7) unstable; urgency=medium

  * debian/patches/fix-vboxvideo-with-linux-5.0.patch:
    - add another build (this time for vboxvideo) LP: #1819352
  *  Add README.Debian.security file, to make users aware
     of the security issues in the package (this was part of the -6
     upload)

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Sun, 10 Mar 2019 21:26:29 +0100

virtualbox (6.0.4-dfsg-6) unstable; urgency=medium

  * Upstream build fix with kernel 5.0 (LP: #1813071)

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Sat, 09 Mar 2019 13:50:34 +0100
